GridClassKey 1.0.0-pl (April 21, 2014)
=================================================
- bugfix missed compress JS checking
- add gridclasskey.mgr_css to system settings
- [#73] fix custom output filters for TV fields
- [#42] Option to hide bulk action button and advanced search
- fix saving on CMP

GridClassKey 1.0.0-rc5 (April 17, 2014)
=================================================
- [#70] fix inline editing that breaks parsed TV 
- [#67][#71] condition to avoid breaking JS because of compress_css and compress_js

GridClassKey 1.0.0-rc4 (April 15, 2014)
=================================================
- [#55] Problem with drag-drop and menuindex direction on reverse order
- [#65] Add snippet field
- [#58] Setting to change amount of rows shown by default 
- [#59] Add typeahead to Add TV Field combo box
- add "Reset" button on setting's grid
- add Properties field for new child
- [#61][#62] enable TV updating on the grid
- [#56] revert the checkbox action
- [#57] typo on LIKE query
- fix dropdown menuindex sorting
- add version param when loading CSS and JS files
- fix Action's column width on FireFox
- [#53] Fix AjaxManager compatibility issues by @danyaPostfactum

GridClassKey 1.0.0-rc3 (March 22, 2014)
=================================================
- [#35] Icons on button controls break in MODX 2.3
- [#44] Feature request: Publish/unpublish icon
- [#33] FR: Sorting based on TV values
- move the back button field above the rest settings
- fix TV parsed value on grid
- fix class_key initiation of the new child resource
- fix width of the Action column

GridClassKey 1.0.0-rc2 (March 18, 2014)
=================================================
- [#41] option to replace the text of "Back to Container" button
- apply default children's settings into plugin
- add fixed column option on grid's setting
- added russian & italian lexicons
- remove spaces on the package's name <http://forums.modx.com/thread/88734/package-version-check#dis-post-489531>