@@ -37,10 +37,18 @@ class ContainersGetListProccessor extends modObjectGetListProcessor {
      * @return boolean
      */
     public function initialize() {
-        $this->editAction = $this->modx->getObject('modAction', array(
-            'namespace' => 'core',
-            'controller' => 'resource/update',
-        ));
+        $vers = $this->modx->getVersionData();
+        $ver_comp = version_compare($vers['full_version'], '2.3.0');
+        if ($ver_comp < 0) {
+            $this->editAction = 'resource/update';
+        } else {
+            $editAction = $this->modx->getObject('modAction', array(
+                'namespace' => 'core',
+                'controller' => 'resource/update',
+            ));
+            $this->editAction = $editAction->get('id');
+        }
+        
         return parent::initialize();
     }
 
@@ -99,7 +107,7 @@ class ContainersGetListProccessor extends modObjectGetListProcessor {
             $resourceArray['publishedon'] = strftime('%b %d, %Y %H:%I %p', $publishedon);
         }
 
-        $resourceArray['action_edit'] = '?a=' . $this->editAction->get('id') . '&id=' . $resourceArray['id'];
+        $resourceArray['action_edit'] = '?a=' . $this->editAction . '&id=' . $resourceArray['id'];
 
         $this->modx->getContext($resourceArray['context_key']);
         $resourceArray['preview_url'] = $this->modx->makeUrl($resourceArray['id'], $resourceArray['context_key'], null, 'full');
